<resources>
	<string name="app_name">S.S.E.</string>
	<string name="app_name_full">Secret Space Encryptor</string>
	<string name="app_name_full_free">Secret Space Encryptor (free)</string>
	<string name="app_name_full_pro">Secret Space Encryptor Pro</string>
	<string name="common_app_passwordVault_name">Password Vault</string>
	<string name="common_app_messageEncryptor_name">Text Encryptor</string>
	<string name="common_app_fileEncryptor_name">File Encryptor</string>
	<string name="common_app_settings_name">Settings</string>
	<string name="common_app_otherUtils_name">Other Utils</string>
	<string name="common_returnToMainMenuTitle">Return</string>
	<string name="common_ok_text">OK</string>
	<string name="common_cancel_text">Cancel</string>
	<string name="common_yes_text">Yes</string>
	<string name="common_no_text">No</string>
	<string name="common_continue_text">Continue</string>
	<string name="common_algorithm_text">Algorithm</string>
	<string name="common_benchmark_text">Benchmark</string>
	<string name="common_deleting_text">Deleting</string>
	<string name="common_question_delete">Do you want to delete &lt;b&gt;&lt;1&gt;&lt;/b&gt;?</string>
	<string name="common_question_wipe">Do you want to delete (with Wiping) &lt;b&gt;&lt;1&gt;&lt;/b&gt;?</string>
	<string name="common_question_leave">Do you want to leave &lt;b&gt;&lt;1&gt;&lt;/b&gt;?</string>
	<string name="common_question_saveChanges">Do you want to save changes?</string>
	<string name="common_question_delete_confirm">Selected item has been deleted.</string>
	<string name="common_name_text">Name</string>
	<string name="common_title_text">Title</string>
	<string name="common_password_text">Password</string>
	<string name="common_comment_text">Comment</string>
	<string name="common_notes_text">Notes</string>
	<string name="common_delete_text">Delete</string>
	<string name="common_save_text">Save</string>
	<string name="common_edit_text">Edit</string>
	<string name="common_item_text">Item</string>
	<string name="common_folder_text">Folder</string>
	<string name="common_file_text">File</string>
	<string name="common_files_text">Files</string>
	<string name="common_new_text">New</string>
	<string name="common_message_text">Message</string>
	<string name="common_toMainPage">Main Menu</string>
	<string name="common_enter_text">Enter</string>
	<string name="common_leave_text">Leave</string>
	<string name="common_copy_text">Copy</string>
	<string name="common_copyall_text">Copy All</string>
	<string name="common_copyParagraph_text">Copy Paragraph</string>
	<string name="common_noTextToCopy">No text to Copy</string>
	<string name="common_paste_text">Paste</string>
	<string name="common_encrypt_text">Encrypt</string>
	<string name="common_decrypt_text">Decrypt</string>
	<string name="common_encryption_text">Encryption</string>
	<string name="common_decryption_text">Decryption</string>
	<string name="common_moveTo_text">Move to</string>
	<string name="common_moveToFolder_text">Move to Folder</string>
	<string name="common_moreDots_text">More...</string>
	<string name="common_importVault_text">Import Vault</string>
	<string name="common_error_invalid_password_file_text">Invalid password or corrupted file</string>
	<string name="common_error_invalid_checksum_file_text">Invalid check code</string>
	<string name="common_enterTheName_text">Set a &lt;b&gt;name&lt;/b&gt;</string>
	<string name="common_enterThePassword_text">Set a &lt;b&gt;password&lt;/b&gt;</string>
	<string name="common_enterFileName_text">Enter File Name</string>
	<string name="common_fileNameAlreadyExists_text">File name &lt;b&gt;&lt;1&gt;&lt;/b&gt; already exists.</string>
	<string name="common_fileRenamed_text">File &lt;b&gt;&lt;1&gt;&lt;/b&gt; has been renamed to &lt;b&gt;&lt;2&gt;&lt;/b&gt;</string>
	<string name="common_fileFailedToRename">Failed to rename file &lt;b&gt;&lt;1&gt;&lt;/b&gt;</string>
	<string name="common_fileFailedToDelete">Failed to delete file &lt;b&gt;&lt;1&gt;&lt;/b&gt;</string>
	<string name="common_generatingKey_text">Generating Key</string>
	<string name="common_compressing_text">Compressing</string>
	<string name="common_encrypting_text">Encrypting</string>
	<string name="common_decompressing_text">Decompressing</string>
	<string name="common_decrypting_text">Decrypting</string>
	<string name="common_wiping_text">Wiping</string>
	<string name="common_checkingdir_text">Checking Dir: &lt;1&gt; files</string>
	<string name="common_current_text">Current</string>
	<string name="common_unlock_text">Unlock</string>
	<string name="common_locked_text">Locked</string>
	<string name="common_incorrectFile_text">Incorrect File</string>
	<string name="common_unknownAlgorithm_text">Unknown algorithm or corrupted data</string>
	<string name="common_copyToClipboard_text">Copy to Clipboard</string>
	<string name="common_passwordCopiedToClipboard_text">Password has been copied to the system clipboard.</string>
	<string name="common_copyToClipboardWarning"><![CDATA[<font face="times new roman" color="#BBBB77"><small><i><b>Note:</b> Be careful when using the system clipboard for sensitive data (like passwords) manipulation. Some applications can monitor the clipboard and even archive its contents.</i></small></font>]]></string>
	<string name="common_xmlParsing_unexpectedElement">Unexpected Element</string>
	<string name="common_xmlParsing_incorrectSize">Incorrect Size</string>
	<string name="common_xmlParsing_incorrectData">Incorrect Data</string>
	<string name="common_xmlParsing_elementMissing">Mandatory Element Missing</string>
	<string name="common_warning_text">Warning</string>
	<string name="common_dontShowThisAgain">Don\'t show me this again</string>
	<string name="common_canceledByUser">Canceled by User</string>
	<string name="common_textCopiedToSystemClipboard">Text has been copied to the system clipboard.</string>
	<string name="common_goToURL_text">Go to URL</string>
	<string name="common_return_text">Return</string>
	<string name="common_noItems_text">No Items</string>
	<string name="common_noTextToLoad_text">No text to load</string>
	<string name="common_replacefile_text">Replace File</string>
	<string name="common_invalidPath_text">Invalid Path</string>
	<string name="common_noActionsAvailable_text">No actions available</string>
	<string name="common_noFiles_text">No files</string>
	<string name="common_whatsNew">What\'s New</string>
	<string name="common_selectedXItems"><![CDATA[Selected: <1> items]]></string>
	<string name="common_replacefile_question"><![CDATA[File <b><1></b> already exists. Do you want to replace the existing file?]]></string>
	<string name="common_replaceText_question">Do you want to replace the existing text?</string>
	<string name="common_importExportPathInvalid">Import/Export directory &lt;b&gt;&lt;1&gt;&lt;/b&gt; is invalid. Please use the app settings to correct it.</string>
	<string name="common_multipleFilesSelected">Multiple Files Selected</string>
	<string name="common_somethingWentWrong">Something went wrong</string>
	<string name="common_precessing_text">Processing</string>
	<string name="common_unavailable_text">unavailable</string>
	<string name="common_disabled_text">Disabled</string>
	<string name="common_disable_text">Disable</string>
	<string name="common_invalid_format_version">Unknown format version, please upgrade the app to the latest version.</string>
	<string name="common_outputImageSize">Output Image Size (width x height)</string>
	<string name="common_jpegQuality">JPEG Quality</string>
	<string name="common_steganogramParameters">Steganogram Parameters</string>
	<string name="common_invalidImageFile">Invalid image file.</string>
	<string name="common_insufficientMemory">Insufficient memory to complete current operation:</string>
	<string name="common_insufficientMemoryMaybe"><![CDATA[<b>Warning:</b><br/>There is a possibility of insufficient memory for this operation.]]></string>
	<string name="common_invalidPasswordOrSteganogram">Incorrect password or invalid steganogram.</string>
	<string name="common_newIFolders">New folders</string>
	<string name="common_newItems">New items</string>
	<string name="common_replacedItems">Replaced items</string>
	<string name="common_useHelpForDetails">use help for more details</string>
	<string name="common_imagesizeunits_px">\u0020px\u0020</string>
	<string name="common_browseForFile">Browse for File ...</string>
	<string name="common_openFilePicker">open file picker</string>
	<string name="common_invalidFile">Invalid file</string>
	<string name="common_text_length">Length</string>
	<string name="main_passwordVaultButton">Password Vault</string>
	<string name="main_messageEncButton">Text Encryptor</string>
	<string name="main_fileEncButton">File/Dir Encryptor</string>
	<string name="main_otherUtils">Other Utils</string>
	<string name="main_settingsButton">Settings</string>
	<string name="main_helpButton">Help</string>
	<string name="main_exitButton">Exit</string>
	<string name="main_AvailableAlgorithmsText">&lt;br/&gt;&lt;b&gt;Available algorithms:&lt;/b&gt;</string>
	<string name="main_report_title">&lt;b&gt;Application Security Report:&lt;/b&gt;&lt;br/&gt;</string>
	<string name="main_firstStartup_text">First Start-Up: </string>
	<string name="main_lastStartup_text">Last Start-Up: </string>
	<string name="main_numberOfStartups_text">Start-Ups: </string>
	<string name="main_dbIntegrity_text">Database integrity: </string>
	<string name="fe_goButton">Encrypt/Decrypt</string>
	<string name="fe_goButtonEncFile">Encrypt File</string>
	<string name="fe_goButtonDecFile">Decrypt File</string>
	<string name="fe_goButtonEncDir">Encrypt Dir</string>
	<string name="fe_tip_1">Tip: Long tap (or icon tap) to select folder</string>
	<string name="fe_tip_2">Tip: Delete File – select File/Folder, press More Button, choose Delete</string>
	<string name="fe_tip_3">Tip: Rename File – select File/Folder, press More Button, choose Rename</string>
	<string name="fe_select_destination">Select Destination</string>
	<string name="fe_selected_text">Selected:</string>
	<string name="fe_currentDir_text">Current Dir:</string>
	<string name="fe_emptyDir_text">Empty Folder</string>
	<string name="fe_question_cancel_title">Cancel</string>
	<string name="fe_question_cancel_question">Cancel current task?</string>
	<string name="fe_file_dialogTitle">File</string>
	<string name="fe_folder_dialogTitle">Folder</string>
	<string name="fe_deleteFile_dialogTitle">Delete File</string>
	<string name="fe_deleteFolder_dialogTitle">Delete Folder</string>
	<string name="fe_wipeFile_dialogTitle">Wipe File</string>
	<string name="fe_wipeFolder_dialogTitle">Wipe Folder</string>
	<string name="fe_zipFile_dialogTitle">Zip File</string>
	<string name="ou_passwordGenerator">Password Generator</string>
	<string name="ou_clipboardCleaner">Clipboard Cleaner</string>
	<string name="ou_algorithmBenchmark">Algorithm Benchmark</string>
	<string name="ou_applicationReport">Application Report</string>
	<string name="passwordGeneratorDialog_generate_text">Generate</string>
	<string name="passwordGeneratorDialog_charset_text">Char Set</string>
	<string name="passwordGeneratorDialog_lehgth_text">Length</string>
	<string name="passwordGeneratorDialog_set_text">Set</string>
	<string name="passwordGeneratorDialog_toClipboard_text">To Clipboard</string>
	<string name="passwordGeneratorDialog_customCharSet">Custom Char Set</string>
	<string name="passwordDialog_showPassword">  Show Password</string>
	<string name="passwordDialog_oldPasswordHint">current password</string>
	<string name="passwordDialog_passwordHint">password</string>
	<string name="passwordDialog_confirmPasswordHint">confirm password</string>
	<string name="encDecChoiceDialog_alreadyExistsWarning">Warning:\nFile already exists (will be replaced)</string>
	<string name="common_pro_upgrade">Upgrade to Pro Version</string>
	<string name="common_pro_downloads">Pro Desktop (PC) Versions Downloads</string>
</resources>