<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/OU_layout_root"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_margin="0.0px"
	android:paddingTop="5.0dp"
	>
	<RelativeLayout 
		android:layout_above="@+id/OU_menuWrapper"	  
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		>	    
		<ScrollView 
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:fadeScrollbars="false"
		    >
		    <LinearLayout
				android:id="@+id/MainWrapper"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"	
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				>
				<LinearLayout
					android:id="@+id/TopWrapper"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					>
					<ext.os.misc.AutoResizeTextView
						android:text="@string/ou_passwordGenerator"
						android:layout_height="wrap_content"
						android:id="@+id/OU_PasswordGenerator"
						android:layout_width="fill_parent"
						android:singleLine="true"
						style="@style/CryptButtonBase"
						></ext.os.misc.AutoResizeTextView>
					<ext.os.misc.AutoResizeTextView
						android:text="@string/ou_clipboardCleaner"
						android:layout_height="wrap_content"
						android:id="@+id/OU_ClipboardCleaner"
						android:layout_width="fill_parent"
						android:singleLine="true"
						style="@style/CryptButtonBase"
						></ext.os.misc.AutoResizeTextView>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/BottomWrapper"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					>
					<ext.os.misc.AutoResizeTextView
						android:text="@string/ou_applicationReport"
						android:layout_height="wrap_content"
						android:id="@+id/OU_ApplicationReport"
						android:layout_width="fill_parent"
						android:singleLine="true"
						style="@style/CryptButtonBase"
						></ext.os.misc.AutoResizeTextView>
					<ext.os.misc.AutoResizeTextView
						android:text="@string/ou_algorithmBenchmark"
						android:layout_height="wrap_content"
						android:id="@+id/OU_AlgorithmBenchmark"
						android:layout_width="fill_parent"
						android:singleLine="true"
						style="@style/CryptButtonBase"
						></ext.os.misc.AutoResizeTextView>
					<FrameLayout
						android:id="@+id/PWVD_bottomDelimiter"
						style="@style/DelimiterWhite"
						android:layout_marginTop="8dp"
						android:layout_marginBottom="8dp"
						android:visibility="gone"
						>
						</FrameLayout>
					<ext.os.misc.AutoResizeTextView
						android:text="@string/common_pro_upgrade"
						android:layout_height="wrap_content"
						android:id="@+id/OU_UpgradeToProVersion"
						android:layout_width="fill_parent"
						android:visibility="gone"
						android:singleLine="true"
						style="@style/SSEUpgradeProButton"
						></ext.os.misc.AutoResizeTextView>
					<ext.os.misc.AutoResizeTextView
						android:text="@string/common_pro_downloads"
						android:layout_height="wrap_content"
						android:id="@+id/OU_ProDownloads"
						android:layout_width="fill_parent"
						android:visibility="gone"
						android:singleLine="true"
						style="@style/SSEProButton"
						></ext.os.misc.AutoResizeTextView>
				</LinearLayout>
			</LinearLayout>
		</ScrollView>
	</RelativeLayout>
	<LinearLayout
		android:id="@+id/OU_menuWrapper"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_alignParentBottom="true"
		>
		<Button
			android:text=""
			android:id="@+id/OU_helpButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/ButtonHelp"
			android:ellipsize="end"
			></Button>
	</LinearLayout>
</RelativeLayout>
