<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingRight="2dp"
	>
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:paddingRight="8dp"
		android:paddingBottom="10dp"
		android:paddingTop="0dp"
		>
		<TableLayout
			android:layout_height="wrap_content"
			android:layout_width="400dp"
			android:minWidth="200px"
			>
			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				>
				<Spinner
					android:id="@+id/PWVFD_colorCombo"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_weight="0.5"
					android:padding="0px"
					></Spinner>
				<Spinner
					android:id="@+id/PWVFD_positionCombo"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_weight="1.0"
					android:padding="0px"
					></Spinner>
			</LinearLayout>
			<EditText
				android:text=""
				android:id="@+id/PWVFD_name"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:maxLength="300"
				android:hint="@string/common_name_text"
				android:textColor="#000"
				></EditText>
			<EditText
				android:text=""
				android:id="@+id/PWVFD_comment"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:minLines="3"
				android:maxLength="2000"
				android:gravity="top|left"
				android:hint="@string/common_notes_text"
				android:textColor="#000"
				></EditText>
			<FrameLayout
				android:id="@+id/PWVFD_delimiter"
				style="@style/DelimiterWhite"
				>
			</FrameLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<Button
					android:id="@+id/PWVFD_deleteButton"
					android:text="@string/common_delete_text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					style="@style/Button_Standard"
					></Button>
				<Button
					android:id="@+id/PWVFD_editSaveButton"
					android:text="@string/common_edit_text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					style="@style/Button_Standard"
					></Button>
			</LinearLayout>
		</TableLayout>
	</RelativeLayout>
</ScrollView>
