<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingRight="2dp"
	android:paddingTop="0dp"
	>
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:paddingRight="8dp"
		android:paddingBottom="10dp"
		android:paddingTop="0dp"
		>
		<TableLayout
			android:layout_height="wrap_content"
			android:layout_width="400dp"
			>
			<FrameLayout
				android:layout_width="fill_parent"
				android:layout_height="1.0px"
				android:minHeight="1.0px"
				android:layout_marginBottom="8.0dp"
				android:background="@color/grey"
			/>
			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				>
				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_weight="0.5"
					android:orientation="vertical"
					>
					<TextView
						android:text="@string/passwordGeneratorDialog_charset_text"
						android:id="@+id/PWGD_charsetText"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:paddingBottom="4dp"
						></TextView>
					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						>
						<Spinner
							android:id="@+id/PWGD_charsetSpinner"
							android:layout_height="wrap_content"
							android:layout_width="fill_parent"
							android:layout_weight="1.0"
							android:padding="0px"
							></Spinner>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_weight="1.0"
					android:orientation="vertical"
					>
					<TextView
						android:text="@string/passwordGeneratorDialog_lehgth_text"
						android:id="@+id/PWGD_length_text"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:paddingBottom="4dp"
						></TextView>
					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						>
						<EditText
							android:id="@+id/PWGD_length"
							android:text="0"
							android:layout_width="0dip"
							android:layout_height="wrap_content"
							android:singleLine="true"
							android:inputType="number"
							android:layout_weight="1.0"
							android:maxLength="2"
							android:gravity="center_horizontal"
							/>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
			<CheckBox
				android:text=""
				android:id="@+id/PWGD_excludeCheckBox"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				></CheckBox>
			<LinearLayout
				android:id="@+id/PWGD_customCharSetContainer"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:orientation="vertical"
				android:visibility="gone"
				>
				<TextView
					android:text="@string/passwordGeneratorDialog_customCharSet"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingBottom="4dp"
					></TextView>
				<EditText
					android:text="xyz"
					android:id="@+id/PWGD_customCharSetET"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:maxLength="5000"
					android:inputType="textNoSuggestions"
					></EditText>
			</LinearLayout>
			<EditText
				android:text="@string/common_password_text"
				android:id="@+id/PWGD_passwordField"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:password="true"
				android:maxLength="99"
				></EditText>
			<FrameLayout
				android:id="@+id/PWGD_delimiter"
				style="@style/DelimiterWhite"
				>
			</FrameLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<Button
					android:id="@+id/PWGD_setButton"
					android:text="@string/passwordGeneratorDialog_set_text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:singleLine="true"
					android:ellipsize="end"
					style="@style/Button_Standard"	
					></Button>
				<Button
					android:id="@+id/PWGD_toClipboardButton"
					android:text="@string/passwordGeneratorDialog_toClipboard_text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:singleLine="true"
					android:ellipsize="end"
					style="@style/Button_Standard"	
					></Button>
				<Button
					android:id="@+id/PWGD_generateButton"
					android:text="@string/passwordGeneratorDialog_generate_text"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:singleLine="true"
					android:ellipsize="end"
					style="@style/Button_Standard"	
					></Button>
			</LinearLayout>
		</TableLayout>
	</RelativeLayout>
</ScrollView>
