<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingLeft="10dp"
	android:paddingRight="8dp"
	android:paddingBottom="10dp"
	android:paddingTop="0dp"
	>
	<LinearLayout
		android:id="@+id/SLD_main"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>
		<EditText
			android:text=""
			android:id="@+id/SLD_passwordEditText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:maxLength="1024"
			android:hint="@string/passwordDialog_passwordHint"
			></EditText>
		<CheckBox
			android:text="@string/passwordDialog_showPassword"
			android:id="@+id/SLD_showPasswordCheckBox"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:nextFocusDown="@+id/PD_okButton"
			></CheckBox>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<Button
				android:id="@+id/SLD_leaveButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/ButtonExit"
				></Button>
			<Button
				android:id="@+id/SLD_unlockButton"
				android:text="@string/common_unlock_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				style="@style/ButtonExpander"
			></Button>
		</LinearLayout>
		<TextView 
		    android:id="@+id/SLD_alertTV"
		    android:text=""
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textColor="#FF0000"	
			android:textSize="16sp"
			android:layout_marginTop="4dp"
			android:visibility="gone"	
		    ></TextView>
	</LinearLayout>
</RelativeLayout>
