<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
	<LinearLayout
		android:id="@+id/EDCD_main"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>
		<FrameLayout
			android:background="@color/grey_dialogBorder"
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_marginTop="1dp"
			android:layout_marginBottom="0dp"
			/>
		<ScrollView
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:fadeScrollbars="true"
			>
			<TextView
				android:text="text"
				android:id="@+id/EDCD_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="16sp"
				android:padding="8dp"
				android:textColor="@color/white"
				></TextView>
		</ScrollView>
		<FrameLayout
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="4dp"
		    >
			<CheckBox
				android:text="checkbox"
				android:id="@+id/EDCD_allToOneFile"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				></CheckBox>
		</FrameLayout>		
		<LinearLayout
			android:id="@+id/EDCD_enterFileNameContainer"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:visibility="gone"
			android:paddingLeft="8dp"
			android:paddingRight="8dp"
			android:paddingBottom="6dp"
			>
			<EditText
				android:text=""
				android:id="@+id/EDCD_fileName"
				android:hint="@string/common_enterFileName_text" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:maxLength="512"
				><requestFocus /></EditText>
			<TextView
				android:text="@string/encDecChoiceDialog_alreadyExistsWarning"
				android:id="@+id/EDCD_fileAlreadyExists"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/gold"
				android:visibility="gone"
				></TextView>		
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:paddingLeft="2dp"
			android:paddingRight="2dp"
			android:background="@color/dialogButtonsBackground"
			>
			<Button
				android:id="@+id/EDCD_cancel"
				android:text="@string/common_cancel_text"
				android:textStyle="bold"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				style="@style/Button_Standard"
				></Button>
			<Button
				android:id="@+id/EDCD_continue"
				android:text="@string/common_continue_text"
				android:textStyle="bold"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				style="@style/Button_Standard"
			></Button>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
