<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/M_mainMain"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_margin="0.0px"
	android:paddingTop="5.0dp"
	>
	<ScrollView
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:fadeScrollbars="false"
		android:layout_alignParentTop="true"
		android:layout_above="@+id/M_bottomButtons"
		>
	<LinearLayout
			android:id="@+id/M_mainTable"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
			>
			<LinearLayout
				android:id="@+id/M_containerA"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
			/>
			<LinearLayout
				android:id="@+id/M_containerB"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
			/>		

		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:id="@+id/M_bottomButtons"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="center_vertical"
		android:layout_alignParentBottom="true"
		>
		<ext.os.misc.AutoResizeTextView
			android:text="@string/main_settingsButton"
			android:layout_height="wrap_content"
			android:id="@+id/M_settingsButton"
			android:layout_width="fill_parent"
			android:layout_weight="1.0"
			style="@style/Button_A"
			android:ellipsize="end"
			></ext.os.misc.AutoResizeTextView>
		<ext.os.misc.AutoResizeTextView
			android:text="@string/main_helpButton"
			android:layout_height="wrap_content"
			android:id="@+id/M_helpButton"
			android:layout_width="fill_parent"
			android:layout_weight="1.0"
			style="@style/Button_A"
			android:ellipsize="end"
			></ext.os.misc.AutoResizeTextView>
		<ext.os.misc.AutoResizeTextView
			android:text="@string/main_exitButton"
			android:layout_height="wrap_content"
			android:id="@+id/M_exitButton"
			android:layout_width="fill_parent"
			android:layout_weight="1.0"
			style="@style/Button_A"
			android:ellipsize="end"
			></ext.os.misc.AutoResizeTextView>
	</LinearLayout>
</RelativeLayout>
